fix try button on mobile

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,6 +11,7 @@ body.home-index {
 
   .jumbotron {
     position: relative;
+    padding-bottom: 90px;
     background-color: rgba(0,0,0,0.2);
     h1 {
       text-shadow: 2px 2px 10px black;
@@ -19,8 +20,26 @@ body.home-index {
 
   .try-it {
     position: absolute;
-    top: 40px;
-    right: 40px;
+    bottom: 40px;
+  }
+
+  @media (min-width: $screen-sm-min) {
+    .try-it {
+      bottom: 40px;
+    }
+  }
+
+  @media (min-width: $screen-lg-min) {
+    .jumbotron {
+      padding-bottom: 48px;
+    }
+
+    .try-it {
+      top: 40px;
+      right: 40px;
+      bottom: auto;
+      left: auto;
+    }
   }
 
   .support {
